--- a/style.css
+++ b/style.css
@@ -9,25 +9,81 @@ body {
   font-family: sans-serif;
 }
 
+.header {
+  height: 300px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  background-image: url("https://i.ytimg.com/vi/eId7-Gk5peY/maxresdefault.jpg");
+  background-size: cover;
+}
 .main-container {
   width: 75%;
   margin: 10px auto;
-  background: rgba(255, 255, 255, 0.86);
-  padding: 5px;
+  padding: 0;
+  box-shadow: 5px 5px 5px #888888;
   border-radius: 10px;
 }
 
 .main-container h1 {
   text-align: center;
+  color: #A3A3A3;
+  font-size: 42px;
+  font-weight: bold;
+}
+
+.by-who {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  margin: 3px 0;
+  font-size: 24px;
+  color:  #A3A3A3;
+}
+
+.by-who span {
+  font-weight: 100;
 }
 
 .text-box {
-  margin: 0px auto;
-  width: 40%;
+  margin: 10px auto;
+  width: 30%;
+  height: 50px;
+  border: 2px solid #00B4ED;
+  box-shadow: 0 0 5px 5px #DCEFFD;
 }
 
-p{
+.message-header {
+  width: 85%;
+  margin: 0 auto;
   text-align: center;
-  margin: 3px 0;
-  font-size: 17px;
+  padding: 10px;
+  font-size: 32px;
+  background-color: #F3F3F3;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  border: 1px solid #A3A3A3;
+}
+
+.message {
+  width: 85%;
+  margin: 0 auto;
+  padding: 10px;
+  font-size: 32px;
+  border: 1px solid #A3A3A3;
+  display: flex;
+  justify-content: space-between;
+
+
+
+}
+
+#date {
+  background-color: #00A0E7;
+  border-radius: 25px;
+  color: white;
+  font-size: 28px;
+  padding: 5px 15px;
+
+
 }
